fix seed; adjust hyperparameters

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -88,7 +88,7 @@
     "num_actions = make_env(seed).action_space.n\n",
     "\n",
     "env_constructors = [\n",
-    "    lambda: make_env(seed + i) for i in range(batch_shape[0])\n",
+    "    lambda i=i: make_env(i) for i in range(batch_shape[0])\n",
     "]\n",
     "\n",
     "output_signature = reinforceable.Timestep(\n",
@@ -183,11 +183,11 @@
     "    policy_network,\n",
     "    value_network,\n",
     "    optimizer=optimizer,\n",
-    "    discount_factor=0.995,\n",
+    "    discount_factor=0.99,\n",
     "    lambda_factor=0.95,\n",
     "    use_gae=True,\n",
     "    use_td_lambda_return=False,\n",
-    "    value_loss_coef=0.2,\n",
+    "    value_loss_coef=0.5,\n",
     "    policy_loss_coef=1.0,\n",
     "    entropy_loss_coef=0.01,\n",
     "    kl_cutoff_factor=2.0,\n",
@@ -196,8 +196,8 @@
     "    kl_target=0.01,\n",
     "    kl_tolerance=0.3,\n",
     "    gradient_clip=0.5,\n",
-    "    value_clip=0.1,\n",
-    "    importance_ratio_clip=0.1,\n",
+    "    value_clip=0.2,\n",
+    "    importance_ratio_clip=0.2,\n",
     "    reward_normalization=True,\n",
     "    state_normalization=True,\n",
     "    advantage_normalization=True,\n",
@@ -240,6 +240,9 @@
     "        f'total episodes: {int(result[\"episodes\"]):,}\\t-\\t'\n",
     "    )\n",
     "\n",
+    "    # Anneal discount factor (gamma)?\n",
+    "    # agent.discount_factor = min(agent.discount_factor + 0.00001, 0.9995)\n",
+    "\n",
     "    # Use agent summary writer to add rolling average episode return and length\n",
     "    # To write to summaries (to to tensorboard), pass a path to summary_writer. \n",
     "    # Then from terminal, run `tensorboard --logdir path`\n",
@@ -247,7 +250,8 @@
     "        with agent.summary_writer.as_default():\n",
     "            tf.summary.scalar('episode_return', result['episode return'], result['steps'])\n",
     "            tf.summary.scalar('episode_length', result['episode length'], result['steps'])\n",
-    "        \n",
+    "\n",
+    "    \n",
     "pbar.close()"
    ]
   },
@@ -284,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "episode_return, episode_length = agent._play(play_env, deterministic=False, pad=batch_shape[0]-1)"
+    "episode_return, episode_length = agent._play(play_env, deterministic=True, pad=batch_shape[0]-1)"
    ]
   },
   {
