implement timestep wrapping in env

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -21,7 +21,9 @@
     "import gymnasium as gym\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "tf.config.set_visible_devices([], 'GPU')"
    ]
   },
   {
@@ -67,7 +69,6 @@
     "    env = envs.gym_wrappers.FloatingStateEnv(env)\n",
     "    env = envs.gym_wrappers.EpisodicLifeEnv(env)\n",
     "    env = envs.gym_wrappers.NoInfoEnv(env)\n",
-    "    env = envs.gym_wrappers.TimestepEnv(env)\n",
     "\n",
     "    env.seed(seed)\n",
     "    env.action_space.seed(seed)\n",
@@ -90,17 +91,7 @@
     "env_constructors = [\n",
     "    lambda i=i: make_env(i) for i in range(batch_shape[0])\n",
     "]\n",
-    "\n",
-    "output_signature = reinforceable.Timestep(\n",
-    "    state=tf.TensorSpec(batch_shape + state_shape, dtype=tf.float32), \n",
-    "    reward=tf.TensorSpec(batch_shape + (1,), dtype=tf.float32),\n",
-    "    step_type=tf.TensorSpec(batch_shape + (1,), dtype=tf.int32),                                    \n",
-    "    info={},\n",
-    ")\n",
-    "\n",
-    "env = envs.AsyncEnvironment(\n",
-    "    env_constructors,\n",
-    "    output_signature=output_signature)\n",
+    "env = envs.AsyncEnvironment(env_constructors)\n",
     "\n",
     "# Visualize initial state of the first environment\n",
     "plt.imshow(env.reset().state[0]);"
@@ -202,8 +193,7 @@
     "    state_normalization=True,\n",
     "    advantage_normalization=True,\n",
     "    summary_writer='/tmp/mylogs/recurrent_ppo_agent',\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
